# infra

./: .commitlintrc.yml  .dockerignore  .envrc  .gitignore  .gitleaks.toml  .pre-commit-README.md  .pre-commit-config.yaml  .pre-commit-spdx.yaml  .releaserc.yml  .trivyignore  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  RUNBOOK-LOCAL-STACK.md  SECURITY-AUDIT-2026-04-17.md  SECURITY.md  deny.toml  port-policy.yaml  renovate.json
armageddon/: Cargo.toml  README.md
armageddon/.github/ISSUE_TEMPLATE/: pingora-upgrade.md
armageddon/armageddon/: Cargo.toml
armageddon/armageddon-admin/: Cargo.toml
armageddon/armageddon-admin-api/: Cargo.toml
armageddon/armageddon-admin-api/src/: auth.rs  lib.rs  metrics.rs  providers.rs  routes.rs  state.rs
armageddon/armageddon-admin-api/tests/: admin_api.rs
armageddon/armageddon-admin/src/: config_reload.rs  error.rs  lib.rs  routes.rs  server.rs  state.rs  stats.rs
armageddon/armageddon-admin/tests/: admin_api.rs
armageddon/armageddon-admin/ui/: app.js  index.html  style.css
armageddon/armageddon-aegis/: Cargo.toml
armageddon/armageddon-aegis/src/: graphql_limits.rs  lib.rs  policy.rs
armageddon/armageddon-ai/: Cargo.toml
armageddon/armageddon-ai/src/: lib.rs  prompt_injection.rs  threat_intel.rs
armageddon/armageddon-arbiter/: Cargo.toml
armageddon/armageddon-arbiter/src/: crs.rs  lib.rs  matcher.rs  rule.rs
armageddon/armageddon-bench/: Cargo.toml
armageddon/armageddon-bench/benches/: otel_propagation.rs  uring_compare.rs
armageddon/armageddon-bench/src/: lib.rs
armageddon/armageddon-cache/: Cargo.toml
armageddon/armageddon-cache/src/: error.rs  key.rs  lib.rs  policy.rs  store.rs  vary.rs
armageddon/armageddon-common/: Cargo.toml
armageddon/armageddon-common/src/: context.rs  decision.rs  engine.rs  error.rs  lib.rs  types.rs
armageddon/armageddon-config/: Cargo.toml
armageddon/armageddon-config/src/: gateway.rs  lib.rs  loader.rs  security.rs  xds.rs
armageddon/armageddon-ebpf/: Cargo.toml  build.rs
armageddon/armageddon-ebpf-programs/: Cargo.toml
armageddon/armageddon-ebpf-programs/src/: events.rs  lib.rs  syscall_latency.rs  tcp_connect.rs
armageddon/armageddon-ebpf/src/: error.rs  lib.rs  metrics.rs
armageddon/armageddon-ebpf/tests/: observability.rs
armageddon/armageddon-forge/: BENCH-METHODOLOGY.md  CUTOVER.md  Cargo.toml  PINGORA-MIGRATION-PROGRESS.md  PINGORA-MIGRATION.md  SHADOW-MODE.md
armageddon/armageddon-forge/benches/: pingora_filter_chain_micro.rs  pingora_vs_hyper.sh  proxy_compare.rs
armageddon/armageddon-forge/docs/: PINGORA-04-UPGRADE-AUDIT.md
armageddon/armageddon-forge/src/: circuit_breaker.rs  compression.rs  cors.rs  feature_flag_filter.rs  feature_flags.rs  grpc_web.rs  health.rs  health_grpc.rs  health_tcp.rs  io_uring_backend.rs  jwt.rs  kafka_producer.rs  lib.rs  otel_middleware.rs  pingora_backend.rs  proxy.rs  router.rs  splice.rs  tcp_proxy.rs  traffic_split.rs  upstream_pool.rs  webhooks.rs  websocket.rs
armageddon/armageddon-forge/tests/: pingora_integration.rs  rate_limit_integration.rs  shadow_chaos.rs
armageddon/armageddon-gateway-admin/: Cargo.toml
armageddon/armageddon-gateway-admin/src/: lib.rs  metrics.rs  routes.rs  settings_cache.rs
armageddon/armageddon-lb/: Cargo.toml
armageddon/armageddon-lb/src/: algorithm.rs  endpoint.rs  least_conn.rs  lib.rs  maglev.rs  outlier.rs  p2c.rs  random.rs  ring_hash.rs  round_robin.rs  weighted.rs
armageddon/armageddon-lb/tests/: lb_tests.rs
armageddon/armageddon-mesh/: Cargo.toml
armageddon/armageddon-mesh/src/: auto_mtls.rs  error.rs  fixtures.rs  lib.rs  rustls_config.rs  spire_client.rs  svid_manager.rs  tests.rs
armageddon/armageddon-nexus/: Cargo.toml
armageddon/armageddon-nexus/src/: aggregator.rs  kaya.rs  lib.rs  scorer.rs
armageddon/armageddon-oracle/: Cargo.toml
armageddon/armageddon-oracle/src/: config.rs  features.rs  lib.rs  model.rs  otel_propagation.rs
armageddon/armageddon-quic/: Cargo.toml
armageddon/armageddon-ratelimit/: Cargo.toml
armageddon/armageddon-retry/: Cargo.toml
armageddon/armageddon-sentinel/: Cargo.toml  DDOS-README.md
armageddon/armageddon-veil/: Cargo.toml
armageddon/armageddon-wasm/: Cargo.toml
armageddon/armageddon-xds/: Cargo.toml  build.rs
armageddon/config/: armageddon-dev.yaml  armageddon-full.yaml  armageddon.yaml  asn-blocklist.yaml  ja4-blocklist.yaml
armageddon/coraza/: PROXY-WASM-HOST-DESIGN.md  README.md  WIRING-TODO.md  build.sh  coraza.conf  scanners.txt
armageddon/docs/: VAGUE-4-RECHERCHE-ROADMAP.md
kaya/: Cargo.toml  DEPLOYMENT.md
kaya/.github/: bencher-config.yml
kaya/config/: default.yaml
kaya/tests/: wal_replay_nightly.rs
terroir/: Cargo.toml  README.md  podman-compose.terroir.yml
terroir/admin/: Cargo.toml  Containerfile
terroir/buyer/: Cargo.toml  Containerfile
terroir/buyer-portal/: README.md
terroir/core/: Cargo.toml  Containerfile  build.rs
terroir/docs/: ANALYSIS-PRE-IMPLEMENTATION-2026-04-30.md  LICENSES-GEO.md  PLAN-TERROIR.md  RUNBOOK-GEO-MIRRORS.md  RUNBOOK-KETO-TUPLES.md  RUNBOOK-MULTI-TENANCY.md  RUNBOOK-VAULT-TRANSIT-PKI.md  ULTRAPLAN-TERROIR-2026-04-30.md  eudr-validator-spike.md
terroir/eudr/: Cargo.toml  Containerfile  build.rs
terroir/migrations/: V001__shared_extensions.sql  V002__shared_schema.sql  V003__rls_helpers.sql
terroir/mobile/: .eslintrc.js  .gitignore  App.tsx  README.md  app.config.ts  app.json  babel.config.js  eas.json  metro.config.js  package.json  tsconfig.json
terroir/mobile-bff/: Cargo.toml  Containerfile  build.rs
terroir/payment/: README.md
terroir/proto/: README.md  core.proto  eudr.proto
terroir/scripts/: bootstrap-p0.sh  seed-tenant-pilot.sh  start-dev.sh
terroir/ussd/: Cargo.toml  Containerfile
terroir/ussd-simulator/: Cargo.toml  Containerfile  README.md
terroir/web-admin/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
xds-controller/: CANARY-README.md  Cargo.toml
xds-controller/config/: xds-controller.yaml
xds-controller/docs/: canary.md
(+1906 files in other folders)
