[workspace]
resolver = "2"
members = [
    "armageddon",
    "armageddon-common",
    "armageddon-config",
    "armageddon-forge",
    "armageddon-sentinel",
    "armageddon-arbiter",
    "armageddon-oracle",
    "armageddon-aegis",
    "armageddon-nexus",
    "armageddon-veil",
    "armageddon-wasm",
    "armageddon-ai",
    "armageddon-quic",
    "armageddon-xds",
    "armageddon-mesh",
    "armageddon-cache",
    "armageddon-admin",
    "armageddon-admin-api",
    "armageddon-lb",
    "armageddon-retry",
    "armageddon-bench",
    "armageddon-ebpf",
    "armageddon-ratelimit",
]
exclude = [
    "armageddon-ebpf-programs",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Proprietary"
repository = "https://github.com/faso-digitalisation/armageddon"

[workspace.dependencies]
# Internal crates
armageddon-common = { path = "armageddon-common" }
armageddon-config = { path = "armageddon-config" }
armageddon-forge = { path = "armageddon-forge" }
armageddon-sentinel = { path = "armageddon-sentinel" }
armageddon-arbiter = { path = "armageddon-arbiter" }
armageddon-oracle = { path = "armageddon-oracle" }
armageddon-aegis = { path = "armageddon-aegis" }
armageddon-nexus = { path = "armageddon-nexus" }
armageddon-veil = { path = "armageddon-veil" }
armageddon-wasm = { path = "armageddon-wasm" }
armageddon-ai = { path = "armageddon-ai" }
armageddon-quic = { path = "armageddon-quic" }
armageddon-xds = { path = "armageddon-xds" }
armageddon-mesh = { path = "armageddon-mesh" }
armageddon-cache = { path = "armageddon-cache" }
armageddon-admin = { path = "armageddon-admin" }
armageddon-admin-api = { path = "armageddon-admin-api" }
armageddon-lb = { path = "armageddon-lb" }
armageddon-retry = { path = "armageddon-retry" }
armageddon-ratelimit = { path = "armageddon-ratelimit" }
armageddon-ebpf-programs = { path = "armageddon-ebpf-programs" }

# Vague 1 external deps
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2"
spiffe = "0.4"
tokio-tungstenite = "0.24"
futures-util = "0.3"
tonic-web = "0.12"
tonic-health = "0.12"
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
blake3 = "1.5"
axum = "0.7"
parking_lot = "0.12"
rand = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# gRPC
tonic = "0.12"
prost = "0.13"

# HTTP
http = "1"
http-body-util = "0.1"
bytes = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# Pattern matching (WAF)
aho-corasick = "1"
regex = "1"

# GeoIP
maxminddb = "0.24"

# Policy engine (OPA / Rego)
regorus = "0.2"

# WASM plugin runtime
wasmtime = "28"

# JWT
jsonwebtoken = "9"

# Crypto
ring = "0.17"

# Redis-compatible client (for KAYA)
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# HMAC-SHA256 for webhook signature validation
hmac = "0.12"
sha2 = "0.10"
# Constant-time comparison (HMAC validation)
subtle = "2"

# Kafka / Redpanda producer (optional; requires librdkafka on the host)
rdkafka = { version = "0.36", default-features = false, features = ["tokio", "dynamic-linking"] }

# Hex encoding
hex = "0.4"

# Base64 encoding (gRPC-Web text variant)
base64 = "0.22"

# Config
config = { version = "0.14", default-features = false, features = ["yaml"] }

# Metrics
prometheus = "0.13"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# IP networks
ipnet = "2"

# Async trait
async-trait = "0.1"

# Arc swap for hot-reload
arc-swap = "1"

# Lazy static globals
lazy_static = "1"

# Test helpers
tempfile = "3"
wat = "1"

# Dashmap for concurrent maps
dashmap = "6"

# C bindings (zero-copy splice, NUMA pinning)
libc = "0.2"

# NUMA topology detection via hwloc (used by armageddon `numa` feature)
hwloc = "0.5"

# GraphQL query parser (for depth/complexity limiting in AEGIS)
async-graphql-parser = "7.0"

# io_uring async runtime (Linux only; enable with feature "io_uring" in consumer crates)
tokio-uring = "0.5"

# OpenTelemetry
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
opentelemetry-http = { version = "0.27" }
opentelemetry-stdout = { version = "0.27" }
tracing-opentelemetry = "0.28"

# Compression codecs (response compression middleware)
brotli = "8"
zstd = "0.13"
flate2 = "1"

# POSIX / Linux syscall bindings (zero-copy splice)
nix = { version = "0.29", features = ["zerocopy"] }

# Criterion benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Pingora — optional alternative proxy backend (armageddon-forge feature "pingora")
# Enable with: cargo build --release --features pingora
pingora = "0.3"
pingora-core = "0.3"
pingora-proxy = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3
