[package]
name = "armageddon-admin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
prometheus = { workspace = true }
subtle = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
armageddon-common = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
