[package]
name = "armageddon-arbiter"
version.workspace = true
edition.workspace = true

[dependencies]
armageddon-common = { workspace = true }
armageddon-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
aho-corasick = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
