[package]
name = "armageddon-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
blake3 = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
prometheus = { workspace = true }
armageddon-common = { workspace = true }
armageddon-nexus = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
