[package]
name = "armageddon-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ipnet = { workspace = true }
async-trait = { workspace = true }
