[package]
name = "armageddon-config"
version.workspace = true
edition.workspace = true

[dependencies]
armageddon-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
