# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "armageddon-ebpf-programs"
version = "1.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/faso-digitalisation/armageddon"
description = "eBPF BPF-side programs for ARMAGEDDON observability (compile target: bpfel-unknown-none)"

# This crate is NOT compiled for the host target.
# It is built by armageddon-ebpf's build.rs via aya-build targeting
# bpfel-unknown-none. It is listed in the workspace so `cargo check`
# can type-check the source without the BPF target present.

[lib]
# No std, no proc-macro — pure BPF object
path = "src/lib.rs"

# eBPF-side dependencies: no_std, no alloc beyond what aya-ebpf provides.
[dependencies]
aya-ebpf = { version = "0.1", optional = true }
aya-log-ebpf = { version = "0.1", optional = true }

[features]
default = []
# Enabled only when building for the bpfel-unknown-none target via build.rs
bpf = ["aya-ebpf", "aya-log-ebpf"]
