# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "armageddon-ebpf"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-or-later"
repository.workspace = true
description = "eBPF observability loader for ARMAGEDDON (Linux, feature-gated)"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
prometheus = { workspace = true }

# Shared event types (always compiled — no BPF target required).
armageddon-ebpf-programs = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", optional = true }
aya-log = { version = "0.2", optional = true }

[build-dependencies]
# aya-build compiles armageddon-ebpf-programs for bpfel-unknown-none
# when the `ebpf` feature is active.
aya-build = { version = "0.1", optional = true }

[features]
default = []
# Enable kernel-side attachment via libelf / libbpf-compatible loader.
ebpf = ["aya", "aya-log", "aya-build"]
