[package]
name = "armageddon-nexus"
version.workspace = true
edition.workspace = true

[dependencies]
armageddon-common = { workspace = true }
armageddon-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
