[package]
name = "armageddon-oracle"
version.workspace = true
edition.workspace = true

[dependencies]
armageddon-common = { workspace = true }
armageddon-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-http = { workspace = true }
opentelemetry-stdout = { workspace = true }
http = { workspace = true }
