[package]
name = "armageddon-retry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
parking_lot = { workspace = true }
armageddon-common = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
